--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run portfolio:serve-ssr",
+    "serve:ssr": "node dist/portfolio/server/main.js",
+    "build:ssr": "ng build && ng run portfolio:server",
+    "prerender": "ng run portfolio:prerender"
   },
   "private": true,
   "dependencies": {
@@ -17,8 +21,14 @@
     "@angular/forms": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
+    "@angular/platform-server": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@nguniversal/express-engine": "^12.1.3",
+    "bootstrap": "^5.1.3",
+    "express": "^4.15.2",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
+    "swiper": "^8.0.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -26,6 +36,8 @@
     "@angular-devkit/build-angular": "~12.2.9",
     "@angular/cli": "~12.2.9",
     "@angular/compiler-cli": "~12.2.0",
+    "@nguniversal/builders": "^12.1.3",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
