--- a/package.json
+++ b/package.json
@@ -23,12 +23,11 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/platform-server": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "@nguniversal/express-engine": "^12.1.3",
     "bootstrap": "^5.1.3",
     "express": "^4.15.2",
+    "express-static-gzip": "^2.1.5",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
-    "swiper": "^8.0.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -37,7 +36,6 @@
     "@angular-devkit/build-angular": "~12.2.9",
     "@angular/cli": "~12.2.9",
     "@angular/compiler-cli": "~12.2.0",
-    "@nguniversal/builders": "^12.1.3",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
