--- a/.github/workflows/portfolio.yml
+++ b/.github/workflows/portfolio.yml
@@ -32,9 +32,9 @@ jobs:
         run: npm run build:prod
 
       - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v3
+        uses: mansoor1998/portfolio@v3
         with:
           target_branch: gh-pages
-          build_dir: dist/weather-app
+          build_dir: dist/portfolio/browser
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
