--- a/.github/workflows/portfolio.yml
+++ b/.github/workflows/portfolio.yml
@@ -31,10 +31,10 @@ jobs:
       - name: Build
         run: npm run build:prod
 
-      # - name: Deploy to GitHub Pages
-      #   uses: crazy-max/ghaction-github-pages@v3
-      #   with:
-      #     target_branch: gh-pages
-      #     build_dir: dist/portfolio/browser
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: gh-pages
+          build_dir: dist/portfolio/browser
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
