--- a/angular.json
+++ b/angular.json
@@ -42,8 +42,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1md"
+                  "maximumWarning": "2kb",
+                  "maximumError": "5kb"
                 }
               ],
               "fileReplacements": [
