--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build:prod": "ng build",
-    "build": "ng build",
+    "build:prod": "ng build --prod --base-href https://mansoor1998.github.io/portfolio/",
+    "build": "ng build --prod --output-path=dist/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "dev:ssr": "ng run portfolio:serve-ssr",
@@ -34,10 +34,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.0",
-    "@angular/cli": "~13.3.0",
+    "@angular-devkit/build-angular": "^16.1.4",
+    "@angular/cli": "^16.1.4",
     "@angular/compiler-cli": "~13.3.0",
-    "@nguniversal/builders": "^13.1.0",
+    "@nguniversal/builders": "^16.1.1",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
