--- a/.github/workflows/portfolio.yml
+++ b/.github/workflows/portfolio.yml
@@ -35,6 +35,6 @@ jobs:
         uses: mansoor1998/portfolio@v3
         with:
           target_branch: gh-pages
-          build_dir: dist/portfolio/browser
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
