--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.4",
-    "@angular/cli": "^16.1.4",
+    "@angular-devkit/build-angular": "~13.3.0",
+    "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
-    "@nguniversal/builders": "^16.1.1",
+    "@nguniversal/builders": "^13.1.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
