modify project for gumroad

--- a/src/assets/appconfig.json
+++ b/src/assets/appconfig.json
@@ -2,5 +2,5 @@
     "email": "mansoorsoomro1997@gmail.com",
     "number": "+4915752612277",
     "remoteUrl": "https://hw6ouqdc.api.sanity.io",
-    "appUrl": "https://mansoor1998.github.io/portfolio"
+    "appUrl": "http://localhost:4200"
 }
