Update portfolio.yml, remove replace secret name

--- a/.github/workflows/portfolio.yml
+++ b/.github/workflows/portfolio.yml
@@ -19,14 +19,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Replace secret
-        uses: cschleiden/replace-tokens@v1
-        with:
-          tokenPrefix: '{'
-          tokenSuffix: '}'
-          files: 'src/environment.prod.ts'
-        env:
-          SECRET_API_KEY: ${{secrets.API_KEY}}
+#       - name: Replace secret
+#         uses: cschleiden/replace-tokens@v1
+#         with:
+#           tokenPrefix: '{'
+#           tokenSuffix: '}'
+#           files: 'src/environment.prod.ts'
+#         env:
+#           SECRET_API_KEY: ${{secrets.API_KEY}}
 
       - name: Build
         run: npm run build:prod
