--- a/src/assets/appconfig.json
+++ b/src/assets/appconfig.json
@@ -1,6 +1,6 @@
 {
-    "email": "mansoorsoomro1997@gmail.com",
-    "number": "+4915752612277",
-    "remoteUrl": "https://hw6ouqdc.api.sanity.io",
-    "appUrl": "http://localhost:4200"
+    "email": "maxmusterman@email.com",
+    "number": "+123456789",
+    "remoteUrl": "https://example.io",
+    "appUrl": "https://example.com"
 }
